k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: just-apps
  namespace: app-store
  labels:
    app: just-apps
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: just-apps
  type: ClusterIP
